--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
         <header class="text-center mb-5">
             <h1 class="display-4">User Story Helper</h1>
             <p class="lead">Improve your user story writing skills with AI-powered feedback</p>
+            <button class="btn btn-outline-secondary btn-sm" id="togglePrompts">
+                Show Analysis Prompts
+            </button>
         </header>
+
+        <div id="promptsContainer" class="row justify-content-center mb-4 d-none">
+            <div class="col-md-8">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Analysis Prompts</h5>
+                        <div id="promptsList" class="list-group list-group-flush">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="row justify-content-center">
             <div class="col-md-8">
